--- a/client/chat.html
+++ b/client/chat.html
@@ -18,8 +18,11 @@
         <a href="index.html" class="btn btn-sign" id="logout">logout</a>
       </div>
     </header>
-    <div class="container">
-      <div class="chatInfo" id="chatInfo">
+    <div class="main">
+      <div class="chatInfo" id="chatInfo" attr-show="hidden">
+        <button type="button" class="arrow" id="arrow">
+          <i class="fa-solid fa-arrows-turn-right"></i>
+        </button>
         <div class="myInfo" id="myinfo">
           <h2 id="myName"></h2>
           <h4 id="myEmail"></h4>
@@ -38,22 +41,24 @@
           <button type="button" id="addBtn" class="addBtn">Add chat</button>
         </div>
       </div>
-      <div class="msgInfo">
-        <div class="message-box" id="msgBox"></div>
-        <form action="" id="form">
-          <span class="element send-box">
-            <input type="text" placeholder="message" id="message" />
-            <button type="button" id="sendMsg">
-              <i class="fa-regular fa-paper-plane fa-fw"></i>
-            </button>
-          </span>
-          <span class="element room-box">
-            <input type="text" id="room" placeholder="room name" />
-            <button type="button" id="goRoom">
-              <i class="fa-regular fa-square-plus fa-fw"></i>
-            </button>
-          </span>
-        </form>
+      <div class="container">
+        <div class="msgInfo">
+          <div class="message-box" id="msgBox"></div>
+          <form action="" id="form">
+            <span class="element send-box">
+              <input type="text" placeholder="message" id="message" />
+              <button type="button" id="sendMsg">
+                <i class="fa-regular fa-paper-plane fa-fw"></i>
+              </button>
+            </span>
+            <span class="element room-box">
+              <input type="text" id="room" placeholder="room name" />
+              <button type="button" id="goRoom">
+                <i class="fa-regular fa-square-plus fa-fw"></i>
+              </button>
+            </span>
+          </form>
+        </div>
       </div>
     </div>
     <script type="module" src="./js/index.js"></script>
