add realtime on get chat section

--- a/client/chat.html
+++ b/client/chat.html
@@ -12,6 +12,10 @@
   <body>
     <header>
       <div class="logo"><i class="fa-solid fa-people-robbery fa-fw"></i></div>
+      <div class="notification">
+        <i class="fa-solid fa-bell notBtn" attr-show="hide"></i>
+        <ul class="notData"></ul>
+      </div>
       <div class="register">
         <a href="login.html" class="btn btn-log" id="login">Login</a>
         <a href="signup.html" class="btn btn-sign" id="signup">Signup</a>
