--- a/client/signup.html
+++ b/client/signup.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div
-      class="w-full flex justify-center items-center flex-col h-screen bg-slate-50 px-3 py-2"
+      class="w-full flex justify-center items-center flex-col h-auto md:h-screen bg-slate-50 px-3 py-2"
     >
       <h1 class="text-6xl px-4 py-2 text-violet-600">Sign up</h1>
       <div
@@ -18,16 +18,16 @@
       >
         <i class="fa-solid fa-people-robbery fa-fw"></i>
       </div>
-      <div class="w-full flex items-center justify-center">
+      <div class="w-full flex flex-col md:flex-row items-center justify-center">
         <ul
           id="errorBoxSign"
-          class="hidden text-red-600 p-2 border border-red-600 bg-red-300"
+          class="hidden text-red-600 p-2 h-32 md:h-auto overflow-y-scroll md:overflow-auto order-2 border border-red-600 bg-red-300"
         ></ul>
 
         <form
           id="form"
           method="post"
-          class="px-4 py-2 w-4/6 flex flex-col justify-center items-center columns-2"
+          class="px-2 md:px-4 py-2 w-full md:w-4/6 flex flex-col order-1 justify-center items-center columns-2"
         >
           <div class="w-4/6 flex items-baseline justify-between">
             <input
@@ -51,6 +51,15 @@
             id="email"
             placeholder="Email"
             class="outline-none text-lg font-medium placeholder:text-lg w-4/6 placeholder-violet-400 px-4 py-3 mb-3 text-violet-600 border-2 border-violet-600 rounded-lg"
+            required
+          />
+          <input
+            type="number"
+            name="phone"
+            id="phone"
+            placeholder="phone"
+            class="outline-none text-lg font-medium placeholder:text-lg w-4/6 placeholder-violet-400 px-4 py-3 mb-3 text-violet-600 border-2 border-violet-600 rounded-lg"
+            required
           />
           <input
             type="password"
