--- a/client/chat.html
+++ b/client/chat.html
@@ -51,14 +51,8 @@
           <form action="" id="form">
             <span class="element send-box">
               <input type="text" placeholder="message" id="message" />
-              <button type="button" id="sendMsg">
+              <button type="button" type="submit" id="sendMsg">
                 <i class="fa-regular fa-paper-plane fa-fw"></i>
-              </button>
-            </span>
-            <span class="element room-box">
-              <input type="text" id="room" placeholder="room name" />
-              <button type="button" id="goRoom">
-                <i class="fa-regular fa-square-plus fa-fw"></i>
               </button>
             </span>
           </form>
