--- a/client/login.html
+++ b/client/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="/dist/output.css" rel="stylesheet" />
+    <link href="dist/output.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/all.css" />
     <title>login</title>
   </head>
@@ -62,6 +62,7 @@
         </p>
       </div>
     </div>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script type="module" src="./js/login.js"></script>
   </body>
 </html>
